# Kerfur

./: .gitignore  CMakeLists.txt  Makefile  README.md  resources.qrc
.github/workflows/: build-deploy-demo.yml  build-deploy.yml
cmake/: compilers.cmake  config.cmake
installer/config/meta/: license.txt
modules/: CMakeLists.txt
modules/Display/: CMakeLists.txt
modules/Display/qml/: BlurHelper.qml  Face.qml  Glow.qml  LedScreen.qml
modules/Tools/: CMakeLists.txt
modules/Tools/qml/: ControlPanel.qml  KSettings.qml  KSlider.qml
modules/Vision/: CMakeLists.txt
modules/Vision/qml/: CameraFeedDisplay.qml
modules/Vision/src/: FaceTracker.cpp  FaceTracker.hpp
patches/: web.patch
qml/: BlurHelper.qml  CMakeLists.txt  ControlPanel.qml  Glow.qml  KSettings.qml  LedScreen.qml  Main.qml  qmldir
qml/Display/: BlurHelper.qml  CMakeLists.txt  Face.qml  Glow.qml  LedScreen.qml
qml/Tools/: CMakeLists.txt  ControlPanel.qml  KSettings.qml  KSlider.qml
scripts/: edit_npy.py  main.py  main2.py
scripts/npy/: eyes.npy  eyes_closed.npy  full_kerfur.npy  half_kerfur.npy  kerfur.npy  kerfur_final.npy  kerfur_final2.npy  safe.npy
scripts/textures/: eyes_opened_empty_meta.json
shaders/: bluritems.frag  bluritems.vert  glow.frag  glow.vert  kerfur.frag  kerfur.vert
src/: main.cpp
